# grib-nomad

./: .gitignore  LICENSE  README.md  pyproject.toml
src/grib_nomad/: __init__.py  cli.py  models.py  tui.py
src/grib_nomad/core/: cache.py  coastline.py  combine.py  config.py  interpolate.py  naming.py  recipe.py  regions.py  routing_compat.py  runner.py  tier.py
src/grib_nomad/data/: gomofs_models.yaml  nomads_models.yaml  nwps_models.yaml
src/grib_nomad/sources/: __init__.py  base.py  ecmwf_open.py  gomofs.py  nomads.py  nwps.py
tests/: test_naming.py  test_nomads_url.py  test_recipe_roundtrip.py  test_regions.py  test_runner_smoke.py  test_tier.py
