[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grib_nomad"
version = "0.1.0.dev0"
description = "Friendly downloader and combiner for NOAA NOMADS GRIB files (and other forecast sources), built for weather routing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["grib", "grib2", "nomads", "noaa", "weather", "forecast", "sailing", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "questionary>=2.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
inspect = ["pygrib>=2.1"]
gomofs = [
    "xarray>=2023.10",
    "netCDF4>=1.6",
    "h5netcdf>=1.3",
    "s3fs>=2024.0",
    "scipy>=1.10",
    "eccodes>=2.30",
    "numpy>=1.24",
    "shapely>=2.0",
    "pyshp>=2.3",
    "kerchunk>=0.2",
    # Pin zarr to 2.x: zarr 3.x has known compatibility issues with kerchunk's
    # v2-format reference dicts in threaded contexts (raises "No group found
    # in store" intermittently even with `zarr_format=2`). 2.x is the version
    # kerchunk has been validated against.
    "zarr>=2.16,<3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "responses>=0.24",
    "ruff",
]

[project.scripts]
grib-nomad = "grib_nomad.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grib_nomad"]

[tool.hatch.build.targets.wheel.force-include]
"src/grib_nomad/data" = "grib_nomad/data"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit external services (skipped by default)",
]
addopts = "-q -m 'not network'"
